packages/fuels-macros/tests/ui/setup_program_test/unknown_contract.rs
use fuels_macros::setup_program_test;

setup_program_test!(
    Abigen(Contract(project = "some_project", name = "MismatchedName")),
    Deploy(
        name = "some_instance",
        contract = "SomeUnknownContract",
        wallet = "some_wallet"
    )
);

fn main() {}
